--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,6 @@
-== README
+== Учебное приложение QnA
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+{<img src="https://codeclimate.com/github/sanyco86/qna/badges/gpa.svg" />}[https://codeclimate.com/github/sanyco86/qna]
+{<img src="https://travis-ci.org/sanyco86/qna.svg?branch=master" alt="Build Status" />}[https://travis-ci.org/sanyco86/qna]
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
